# python-project-template

./: .editorconfig  README.rst  cookiecutter.json  requirements_dev.txt
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/config/: config.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: Project.py  main.py  util.py
